--- a/app/public/src/pages/component/main-sidebar.css
+++ b/app/public/src/pages/component/main-sidebar.css
@@ -1,7 +1,7 @@
 aside.sidebar {
   position: absolute;
   height: 100%;
-  z-index: 999;
+  z-index: 100;
 }
 
 .sidebar-logo {
